<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_radius"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/q_one"
                    android:textSize="@dimen/question_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:padding="@dimen/padding"
                    android:text="@string/question_1"
                    android:textSize="@dimen/question_text_size"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/q_one_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestionOne"
                    android:text="@string/queen" />

                <RadioButton
                    android:id="@+id/q_one_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestionOne"
                    android:text="@string/king" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/q_two"
                    android:textSize="@dimen/question_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:padding="@dimen/padding"
                    android:text="@string/question_2"
                    android:textSize="@dimen/question_text_size"
                    android:textStyle="italic" />

                <RadioButton
                    android:id="@+id/q_two_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestionTwo"
                    android:text="@string/stalemate" />

                    <RadioButton
                    android:id="@+id/q_two_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestionTwo"
                    android:text="@string/castle" />

                    <RadioButton
                        android:id="@+id/q_two_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="answerQuestionTwo"
                        android:text="@string/checkmate" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/card_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/q_three"
                    android:textSize="@dimen/question_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:padding="@dimen/padding"
                    android:text="@string/question_3"
                    android:textSize="@dimen/question_text_size"
                    android:textStyle="italic" />
                <CheckBox android:id="@+id/q_three_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queen"
                    android:onClick="answerQuestionThree"/>
                <CheckBox android:id="@+id/q_three_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/king"
                    android:onClick="answerQuestionThree"/>
                <CheckBox android:id="@+id/q_three_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rook"
                    android:onClick="answerQuestionThree"/>
                <CheckBox android:id="@+id/q_three_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bishop"
                    android:onClick="answerQuestionThree"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>